@@ -10,6 +10,7 @@ version 3.00:
 	Changes:
 	- $oodoc->create()  -->  $oodoc->formatter->createPages
 	- parameters to oodist and in the Makefile.PL via META
+	- $doc->manual($name) --> $doc->findManual($name)
 
 	Fixes:
 	- wrong place for section examples.
